--- a/.github/workflows/sonar-cloud.yml
+++ b/.github/workflows/sonar-cloud.yml
@@ -15,6 +15,11 @@ on:
         required: false
         type: string
         description: 'Name of the gradle module being tested'
+      gradle-args:
+        required: false
+        type: string
+        default: "--no-daemon --parallel"
+        description: 'Additional Gradle arguments'
     secrets:
       GHL_USERNAME:
         required: true
@@ -68,3 +73,4 @@ jobs:
         with:
           gradle-module: ${{ inputs.gradle-module }}
           gradle-tasks: 'test koverXmlReport sonar'
+          gradle-args: ${{ inputs.gradle-args }}
