--- a/.github/workflows/deploy-kotlin.yml
+++ b/.github/workflows/deploy-kotlin.yml
@@ -94,8 +94,8 @@ on:
 
 permissions:
   id-token: write
-  contents: read
-  actions: read
+  contents: write
+  actions: write
 
 jobs:
   create-release-tag:
