--- a/.github/workflows/allow-deploys.yml
+++ b/.github/workflows/allow-deploys.yml
@@ -3,7 +3,7 @@ name: Allow deploys
 on:
   workflow_call:
     inputs:
-      workflow-to-allow:
+      workflow:
         required: true
         type: string
         description: 'Workflow (filename or name) to allow, e.g. "deploy-production.yml".'
@@ -26,7 +26,7 @@ jobs:
         uses: actions/checkout@v4
 
       # Enable CD on merge to main
-      - name: Enable ${{ inputs.workflow-to-allow }} workflow
-        run: gh workflow enable ${{ inputs.workflow-to-allow }}
+      - name: Enable ${{ inputs.workflow }} workflow
+        run: gh workflow enable ${{ inputs.workflow }}
         env:
           GH_TOKEN: ${{ secrets.ADMIN_PAT }}
