--- a/.github/workflows/deploy-kotlin.yml
+++ b/.github/workflows/deploy-kotlin.yml
@@ -78,6 +78,11 @@ on:
         required: false
         type: string
         description: 'Regex pattern for excluding file paths from changelog - example: ^gateway/'
+      run-tests:
+        required: false
+        type: boolean
+        default: true
+        description: 'Run tests before deployment'
 
     secrets:
       GHL_USERNAME:
@@ -136,7 +141,7 @@ jobs:
   test:
     name: Test
     needs: initialize
-    if: always() && needs.initialize.result == 'success'
+    if: inputs.run-tests && needs.initialize.result == 'success'
     uses: ./.github/workflows/component-test-kotlin.yml
     with:
       runner-size: ${{ inputs.runner-size }}
