--- a/.github/workflows/deploy-kotlin.yml
+++ b/.github/workflows/deploy-kotlin.yml
@@ -198,6 +198,8 @@ jobs:
     uses: ./.github/workflows/create-release-tag.yml
     with:
       prefix: ${{ inputs.release-tag-prefix }}
+    secrets:
+      MONTA_BOT_TOKEN: ${{ secrets.MONTA_BOT_TOKEN }}
   create-changelog:
     name: Create and Publish Changelog
     needs: deploy
