feat: Changed the default setting for linkerd services profiles to `true` (#157)
* feat: Changed the default setting for linkerd services profiles to `true`

* this will enable linkerd services profiles for all github actions that uses the `deploy-kotlin.yml` workflow.
  * can be disabled on individual projects by setting `update-service-profile: false`
* also changed the default settings for
  * `enable-release-tag`
  * `enable-changelog`
* both are now true for production releases and false for other deployments. This removes the need for this section in most production workflows (i.e. "it will just work")
```
enable-release-tag: true
enable-changelog: true
```
* before this going in the few projects that did not use these have been fixed
  * `service-wallet` -> [PR#3358](https://github.com/monta-app/service-wallet/pull/3358) ✅
  * `service-ocpp` -> [PR#2652](https://github.com/monta-app/service-ocpp/pull/2652) ✅
  * `service-control` -> [PR#140](https://github.com/monta-app/service-control/pull/140) ✅
  * `service-charge-points` -> [PR#146](https://github.com/monta-app/service-charge-points/pull/146) ❌

* IF the production deployment is both being triggered as a workflow_dispatch AND based on manual tagging, this is the recommended setting for `enable-release-tag`

```
enable-release-tag: ${{ github.event_name == 'workflow_dispatch' }}
```

* ignore: Revert too smart assumptions about being able to use expressions in input variables

--- a/.github/workflows/deploy-kotlin.yml
+++ b/.github/workflows/deploy-kotlin.yml
@@ -86,7 +86,7 @@ on:
       update-service-profile:
         required: false
         type: boolean
-        default: false
+        default: true
         description: 'Use generated openapi spec to generate linkerd service profile and update the service helm chart'
 
     secrets:
