fix: For multi module projects we are looking for "any" swagger service profile and not only in the specified 'gradle-module'
An example of where this went wrong was this action run in OCPP https://github.com/monta-app/service-ocpp/actions/runs/18587226554/job/52994273356 leading to the service profile being the wrong one of the 4 generated profiles - i.e. this https://github.com/monta-app/kube-manifests/blob/main/apps/ocpp/production/app/templates/service-profile.yml

--- a/.github/workflows/component-service-profile-kotlin.yml
+++ b/.github/workflows/component-service-profile-kotlin.yml
@@ -68,7 +68,11 @@ jobs:
           fi
           
           echo "GRADLE_TASK=${GRADLE_TASK}" >> "$GITHUB_ENV"
-          echo "OPENAPI_OUTPUT_DIR=${OUTPUT_DIR}" >> "$GITHUB_ENV"
+          if [ "$GRADLE_MODULE" = "" ]; then
+            echo "OPENAPI_OUTPUT_DIR=${OUTPUT_DIR}" >> "$GITHUB_ENV"
+          else
+            echo "OPENAPI_OUTPUT_DIR=${GRADLE_MODULE}/${OUTPUT_DIR}" >> "$GITHUB_ENV"
+          fi
       - name: Build OpenAPI spec
         shell: bash
         env:
