--- a/.github/workflows/pull-request-react.yml
+++ b/.github/workflows/pull-request-react.yml
@@ -42,6 +42,11 @@ on:
         type: string
         default: 'pnpm run test'
         description: "Command to run for testing (optional)"
+      format-command:
+        required: false
+        type: string
+        default: 'pnpm run format:check'
+        description: "Command to run for format checking (optional)"
 jobs:
   setup:
     name: Setup
@@ -85,6 +90,10 @@ jobs:
       - name: Lint check
         working-directory: ${{ inputs.working-directory }}
         run: ${{ inputs.lint-command }}
+      - name: Format check
+        if: ${{ inputs.format-command != '' }}
+        working-directory: ${{ inputs.working-directory }}
+        run: ${{ inputs.format-command }}
       - name: Run tests
         if: ${{ inputs.test-command != '' }}
         working-directory: ${{ inputs.working-directory }}
