fix: use channel id instead of name
should work: https://docs.slack.dev/reference/methods/chat.postmessage#public

--- a/.github/workflows/deploy-kotlin.yml
+++ b/.github/workflows/deploy-kotlin.yml
@@ -235,4 +235,4 @@ jobs:
           jira-app-name: "montaapp"
           output: "slack"
           slack-token: ${{ secrets.SLACK_APP_TOKEN }}
-          slack-channel: "#releases"
+          slack-channel: "C02PDBL6GAU"
