fix: correct sed indentation for revision and build fields (#166)
* fix: update revision/build at kotlin root level

Update sed commands to place revision and build at kotlin root level (2-space indent) rather than under image (4-space indent).

These fields are chart-level metadata, not image config.

* refactor: replace sed with yq for YAML updates

Replace fragile sed commands with yq for proper YAML manipulation:
- Uses yq to safely update kotlin.image.tag, kotlin.revision, kotlin.build
- No longer depends on specific field order or existence
- More maintainable and structure-aware

yq is pre-installed on ubuntu-latest runners and already used in component-deploy.yml.

--- a/.github/workflows/component-deploy-v2.yml
+++ b/.github/workflows/component-deploy-v2.yml
@@ -71,18 +71,10 @@ jobs:
         shell: bash
         working-directory: ./service-repo/${{ inputs.helm-values-path || format('helm/{0}/{1}/app', inputs.service-identifier, inputs.stage) }}
         run: |
-          sed -i "s/tag: .*/tag: ${{ inputs.image-tag }}/" values.yaml
-          # Add revision and build fields if they don't exist
-          if ! grep -q "^  revision:" values.yaml; then
-            sed -i "/^  image:/a\\  revision: \"${GITHUB_SHA::8}\"" values.yaml
-          else
-            sed -i "s/revision: .*/revision: \"${GITHUB_SHA::8}\"/" values.yaml
-          fi
-          if ! grep -q "^  build:" values.yaml; then
-            sed -i "/^  revision:/a\\  build: ${{ github.run_number }}" values.yaml
-          else
-            sed -i "s/build: .*/build: ${{ github.run_number }}/" values.yaml
-          fi
+          # Update image tag, revision, and build using yq for proper YAML manipulation
+          yq e '.kotlin.image.tag = "${{ inputs.image-tag }}"' -i values.yaml
+          yq e '.kotlin.revision = "${{ github.sha }}"' -i values.yaml
+          yq e '.kotlin.build = ${{ github.run_number }}' -i values.yaml
       - name: Commit to service repository
         working-directory: './service-repo'
         run: |
