--- a/.github/workflows/component-build.yml
+++ b/.github/workflows/component-build.yml
@@ -45,6 +45,11 @@ on:
         required: false
         type: string
         description: 'Existing Slack message ID to update'
+      enable-cache:
+        required: false
+        type: boolean
+        default: false
+        description: 'Enable Docker layer caching'
     secrets:
       AWS_ACCOUNT_ID:
         required: true
@@ -156,7 +161,9 @@ jobs:
           context: .
           file: ./${{ inputs.docker-file-name }}
           push: true
-          no-cache: true
+          no-cache: ${{ !inputs.enable-cache }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
           build-args: |
             ${{ inputs.additional-build-args }}
           labels: |
