--- a/.github/workflows/component-build.yml
+++ b/.github/workflows/component-build.yml
@@ -146,6 +146,9 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
+      - name: Set up Docker Buildx
+        if: inputs.enable-cache
+        uses: docker/setup-buildx-action@v3
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
